fixes add release

--- a/views/addrelease.html
+++ b/views/addrelease.html
@@ -32,8 +32,8 @@
         <div class="container">
             <form class="form" id="addRelease">
                 <div class="form-group">
-                    <label for="exampleFormControlSelect1">Select Release Type</label>
-                    <select class="form-control" id="type">
+                    <label for="exampleFormControlSelect1">Select Release Build</label>
+                    <select class="form-control" id="build">
                         <option>Alpha</option>
                         <option>Beta</option>
                         <option>Production</option>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Release Manager</label>
-                    <select class="form-control" id="manager">
+                    <select class="form-control" id="releaseManager">
                         <option>Release Manager 1</option>
                         <option>Release Manager 2</option>
                         <option>Release Manager 3</option>
