--- a/views/editrelease.html
+++ b/views/editrelease.html
@@ -30,7 +30,7 @@
     <div class="box1">
         <h1>Edit Release</h1>
         <div class="container">
-            <form>
+            <form id="releaseForm">
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Select Release Type</label>
                     <select class="form-control" id="exampleFormControlSelect1">
