--- a/views/release.html
+++ b/views/release.html
@@ -55,7 +55,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title" id="current">Current iOS Release</h5>
-                                    <p class="card-text" id="type">Alpha/Beta/Production</p>
+                                    <p class="card-text" id="build">Alpha/Beta/Production</p>
                                     <p class="card-text" id="os">iOS/Android</p>
                                     <p class="card-text" id="version">1.1.1395</p>
                                     <p class="card-text" id="manager">Release Manager</p>
@@ -71,14 +71,14 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Current Android Release</h5>
-                                    <p class="card-text" id="type">Alpha/Beta/Production</p>
-                                    <p class="card-text" id="os">iOS/Android</p>
-                                    <p class="card-text" id="version">1.1.1395</p>
-                                    <p class="card-text" id="manager">Release Manager</p>
-                                    <p class="card-text" id="experiments">Experiments</p>
-                                    <p class="card-text" id="notes">Notes</p>
-                                    <p class="card-text" id="incidents">Incidents</p>
-                                    <p class="card-text" id="postmortem">Post Mortem</p>
+                                    <p class="card-text" id="build">Beta</p>
+                                    <p class="card-text" id="os">Android</p>
+                                    <p class="card-text" id="version">1.3.2049</p>
+                                    <p class="card-text" id="manager">Eric</p>
+                                    <p class="card-text" id="experiments">There were no experiments for this release</p>
+                                    <p class="card-text" id="notes">Notes: To succeed you must believe. When you believe, you will succeed. Let me be clear, you have to make it through the jungle to make it to paradise, that’s the key, Lion! Surround yourself with angels. You see that bamboo behind me though, you see that bamboo? Ain’t nothin’ like bamboo. Bless up. Put it this way, it took me twenty five years to get these plants, twenty five years of blood sweat and tears, and I’m never giving up, I’m just getting started. They don’t want us to win.</p>
+                                    <p class="card-text" id="incidents">Incidents: None</p>
+                                    <p class="card-text" id="postmortem">Post Mortem: None</p>
                                     <button id="edit-release-btn" type="submit" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
@@ -87,14 +87,14 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">iOS Release</h5>
-                                    <p class="card-text" id="type">Alpha/Beta/Production</p>
-                                    <p class="card-text" id="os">iOS/Android</p>
-                                    <p class="card-text" id="version">1.1.1395</p>
-                                    <p class="card-text" id="manager">Release Manager</p>
+                                    <p class="card-text" id="build">Production</p>
+                                    <p class="card-text" id="os">iOS</p>
+                                    <p class="card-text" id="version">1.1.1</p>
+                                    <p class="card-text" id="manager">Sai</p>
                                     <p class="card-text" id="experiments">Experiments</p>
-                                    <p class="card-text" id="notes">Notes</p>
-                                    <p class="card-text" id="incidents">Incidents</p>
-                                    <p class="card-text" id="postmortem">Post Mortem</p>
+                                    <p class="card-text" id="notes">Notes: Stay focused. Eliptical talk. Bless up. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender. Put it this way, it took me twenty five years to get these plants, twenty five years of blood sweat and tears, and I’m never giving up, I’m just getting started. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender. Stay focused. In life you have to take the trash out, if you have trash in your life, take it out, throw it away, get rid of it, major key.</p>
+                                    <p class="card-text" id="incidents">Incidents: None</p>
+                                    <p class="card-text" id="postmortem">Post Mortem: None</p>
                                     <button id="edit-release-btn" type="submit" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
@@ -103,14 +103,14 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Android Release</h5>
-                                    <p class="card-text" id="type">Alpha/Beta/Production</p>
+                                    <p class="card-text" id="build">Alpha/Beta/Production</p>
                                     <p class="card-text" id="os">iOS/Android</p>
                                     <p class="card-text" id="version">1.1.1395</p>
-                                    <p class="card-text" id="manager">Release Manager</p>
+                                    <p class="card-text" id="manager">Kenneth</p>
                                     <p class="card-text" id="experiments">Experiments</p>
-                                    <p class="card-text" id="notes">Notes</p>
-                                    <p class="card-text" id="incidents">Incidents</p>
-                                    <p class="card-text" id="postmortem">Post Mortem</p>
+                                    <p class="card-text" id="notes">Notes: I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing. Find peace, life is like a water fall, you’ve gotta flow. Find peace, life is like a water fall, you’ve gotta flow. Stay focused. The key is to enjoy life, because they don’t want you to enjoy life. I promise you, they don’t want you to jetski, they don’t want you to smile. It’s important to use cocoa butter. It’s the key to more success, why not live smooth? Why live rough? Always remember in the jungle there’s a lot of they in there, after you overcome they, you will make it to paradise.</p>
+                                    <p class="card-text" id="incidents">Incidents: None</p>
+                                    <p class="card-text" id="postmortem">Post Mortem: None</p>
                                     <button id="edit-release-btn" type="submit" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
                             </div>
