--- a/views/release.html
+++ b/views/release.html
@@ -103,8 +103,8 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">Android Release</h5>
-                                    <p class="card-text" id="build">Alpha/Beta/Production</p>
-                                    <p class="card-text" id="os">iOS/Android</p>
+                                    <p class="card-text" id="build">Production</p>
+                                    <p class="card-text" id="os">Android</p>
                                     <p class="card-text" id="version">1.1.1395</p>
                                     <p class="card-text" id="manager">Kenneth</p>
                                     <p class="card-text" id="experiments">Experiments</p>
@@ -136,9 +136,9 @@
                                     <div class="profile-info">
                                         <div class="col-sm-12">
                                             <div class="col-xs-12 col-sm-8">
-                                                <h3 id="first-name">firstName</h3>
-                                                <h3 id="last-name">lastName</h3>
-                                                <p id="email">email</p><p id="slack">slackHandle</p>
+                                                <h3 id="firstname">first name</h3>
+                                                <h3 id="lastname">last name</h3>
+                                                <p id="email">email</p><p id="slack">slack</p>
                                                 <p id="role">role</p>
                                                 <p>Teams:
                                                     <span id="teams">teams</span> 
