--- a/views/index.html
+++ b/views/index.html
@@ -73,6 +73,7 @@
                 <div class="col-sm-8 col-md-10 text-center" id="text2">
                     <h2 class="pb-3">One Stop Shop For Your Release Process</h2>
                     <p>You no longer have to hit up all the different slack channels or other team members to get up to date information on current releases or any previous release. You'll be able to clearly view what went into a release. Knowing what went into a release and when it was released will help the productivity of any engineering team.</p>
+                    <img src="../images/chairs-device-electronics-eyeglasses-1181376.jpg" alt="" srcset="" id="image2">
                 </div>
                 <div class="col-sm-2 col-md-1"></div>
             </div>
@@ -81,23 +82,22 @@
     <div class="box3">
         <div class="container m-0">
             <div class="row">
-                <div class="col-sm-4 content" id="text3">
+                <div class="col-sm-6 content" id="text3">
                     <h3>Keep Track of iOS and Android</h3>
                     <p>Releases processes for iOS and Android are completely different. The way you track them shouldn't be. Whether you submit a release candidate to the App Store or Google Play Store you can rest assure that you'll know everything there is to your release.</p>
                 </div>
-                <div class="col-sm-8">
-                    <img class="image3" src="../images/selective-focus-photography-of-person-holding-turned-on-1092644.jpg" alt="">
-                </div>
-                <!-- <div class="col-sm-8"></div> -->
+                <div class="col-sm-6"></div>
             </div>
         </div>
     </div>
     <div class="box4">
         <div class="container mr-0">
             <div class="row">
+                <div class="col-sm-6">
+                    <img src="../images/img4.jpg" alt="" srcset="" id="image4">
+                </div>
                 <div class="col-sm-3"></div>
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6 content">
+                <div class="col-sm-3 content" id="text4">
                     <h3>Keep a Historical Record of Your Releases</h3>
                     <p>What release are we on? Whats the last beta build that was cut? What build had a certain feature? Take the guess work out of it by being able to see clearly all previous releases from your team.</p>
                 </div>
@@ -107,12 +107,11 @@
     <div class="box5">
         <div class="container m-0">
             <div class="row">
-                <div class="col-sm-6 content">
+                <div class="col-sm-6 left" id="text5">
                 <h3>Know Which Team Owns Which Feature</h3>
                     <p>Who owns this feature? Can someone link me to the tech spec? Which PM should I reach out to for some clarification around this new feature? The Features Owner Doc has all your answers. The Features Owner Doc is your source of truth for all teams and projects at your company. You no longer need to waste time by trying to figure out who owns which project.</p>
                 </div>
-                <div class="col-sm-3"></div>
-                <div class="col-sm-3"></div>
+                <div class="col-sm-6 right"></div>
             </div>
         </div>
     </div>
