--- a/views/release.html
+++ b/views/release.html
@@ -93,7 +93,7 @@
                                     <p class="card-text" id="manager">Sai</p>
                                     <p class="card-text" id="experiments">Experiments</p>
                                     <p class="card-text" id="notes">Notes: Stay focused. Eliptical talk. Bless up. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender. Put it this way, it took me twenty five years to get these plants, twenty five years of blood sweat and tears, and I’m never giving up, I’m just getting started. The other day the grass was brown, now it’s green because I ain’t give up. Never surrender. Stay focused. In life you have to take the trash out, if you have trash in your life, take it out, throw it away, get rid of it, major key.</p>
-                                    <p class="card-text" id="incidents">Incidents: None</p>
+                                    <p class="card-text" id="incidents">Incidents: None for this release</p>
                                     <p class="card-text" id="postmortem">Post Mortem: None</p>
                                     <button id="edit-release-btn" type="submit" class="btn my-2 my-sm-0">Edit Release</button>
                                 </div>
