--- a/public/styles/addrelease.css
+++ b/public/styles/addrelease.css
@@ -9,8 +9,8 @@
 
 /* -------- Navbar Styling -------- */
 #profile-btn {
-    color: #796eff;
-    background-color: none;
+    color: #ffffff;
+    background-color: #796eff;
     border: none;
     border-radius: 5%;
     cursor: pointer;
