--- a/public/styles/release.css
+++ b/public/styles/release.css
@@ -72,17 +72,18 @@ hr {
 }
 
 /* -------- CALENDAR STYLING -------- */
-.calendar {
-    height: 95vh;
+#calendar {
+    height: 85vh;
+    width: 85vw;
 }
 
 h2 {
-    font-size: 600%;
+    font-size: 700%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    /* margin: auto; */
 }
 .stroke {
     color: #ffffff;
@@ -91,12 +92,28 @@ h2 {
 }
 
 /* -------- PROFILE STYLING -------- */
-.col-centered {
-    float: none;
-    margin: 0 auto;
+#profile {
+    height: 80vh;
+    width: 80vw;
 }
 
+.profile-info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+/* .col-centered {
+    float: none;
+    margin: 0 auto;
+} */
+
 .circle-profile{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 200px;
     height: 200px;
     background-image: url('../images/Screen\ Shot\ 2020-03-10\ at\ 8.02.24\ PM.png');
