--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -33,11 +33,11 @@
             <form class="profile-form" id="profileForm">
                 <div class="form-group">
                     <label for="exampleInputFirstName">First Name</label>
-                    <input type="name" class="form-control" id="firstname" aria-describedby="firstNameHelp" placeholder="First Name">
+                    <input type="text" class="form-control" id="firstname" aria-describedby="firstNameHelp" placeholder="First Name">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputLastName">Last Name</label>
-                    <input type="name" class="form-control" id="lastname" aria-describedby="lastNameHelp" placeholder="Last Name">
+                    <input type="text" class="form-control" id="lastname" aria-describedby="lastNameHelp" placeholder="Last Name">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail">Email address</label>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleInputSlackHandle">Slack Handle</label>
-                    <input type="name" class="form-control" id="slack" aria-describedby="slackHandleHelp" placeholder="@slackhandle">
+                    <input type="text" class="form-control" id="slack" aria-describedby="slackHandleHelp" placeholder="@slackhandle">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Select Role</label>
