--- a/views/login.html
+++ b/views/login.html
@@ -23,7 +23,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"></li>
             </ul>
-            <button  type="button" class="btn btn-outline-success my-2 my-sm-0" id="login-btn" data-toggle="modal" data-target="#modalLoginForm">Log in</button>
+            <button  type="button" class="btn btn-outline-success my-2 my-sm-0" id="login-btn" data-toggle="modal" data-target="#modalLoginForm" href="signup.html">Sign up</button>
             <!-- LOGIN MODAL -->
             <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
             aria-hidden="true">
